many modifications and edits to the appendix, including solution to mincer discount

--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -11,15 +11,19 @@
 
 \author{
 Jorge Luis Garc\'{i}a\\
+Department of Economics\\
 The University of Chicago \and
 James J. Heckman \\
 American Bar Foundation \\
+Department of Economics\\
 The University of Chicago \and
-Andr\'{e}s Hojman\\
-The University of Chicago \and
+Andr\'{e}s Hojman \\
+PUC-Chile School of Government \\ \and
 Duncan Ermini Leaf \\
+Leonard D. Schaeffer Center for Health Policy and Economics\\
 University of Southern California \and
 Mar\'{i}a Jos\'{e} Prados \\
+Dornsife Center for Economic and Social Research\\
 University of Southern California}
 \date{First Draft: January 5, 2016\\ This Draft: \today}
 \maketitle
