--- a/output/abccare_funcform1_ti_ready.tex
+++ b/output/abccare_funcform1_ti_ready.tex
@@ -5,6 +5,6 @@ PIAT (5-7) &         &         &         &         &         &         &        
 Education (30) &         &         &         &         &         &         &         &         &         &         &         &         \\  
 Labor Income (21)  &         &         &         &         &         &         &         &         &         &         &         &         \\  
 BMI (34) &         &         &         &         &         &         &         &         &         &         &         &         \\  
-$\hat{\theta_{c}}$ &         &         &         &         &         &         &  -436.325 &     0.740 &   -46.354 &     0.510 &   389.971 &     0.300 \\  
-$\hat{\theta_{n}}$ &         &         &         &         &         &         &  1,832.447 &     0.065 &  -576.818 &     0.885 & -2,409.264 &     0.980 \\  
+$\hat{\theta}_{c}$ &         &         &         &         &         &         &  -436.325 &     0.740 &   -46.354 &     0.510 &   389.971 &     0.300 \\  
+$\hat{\theta}_{n}$ &         &         &         &         &         &         &  1,832.447 &     0.065 &  -576.818 &     0.885 & -2,409.264 &     0.980 \\  
 Constant &  6,390.572 &     0.105 &  4860.210 &     0.210 & -1,530.363 &     0.605 &  7,225.331 &     0.090 &  7,175.845 &     0.205 &   -49.486 &     0.500 \\ \bottomrule \end{tabular}
