--- a/output/abccare_funcform3_ready.tex
+++ b/output/abccare_funcform3_ready.tex
@@ -6,7 +6,7 @@ PIAT (5-7)&   646.297 &     0.100 &   213.484 &     0.395 &  -432.812 &     0.64
 Education (30) &  2,171.877 &     0.170 & 18,933.859 &     0.000 & 16,761.982 &     0.020 &  4,919.624 &     0.110 & 20,676.168 &     0.010 & 15,756.545 &     0.035 \\  
 Labor Income (21) &     0.606 &     0.080 &     0.316 &     0.230 &    -0.290 &     0.645 &     0.701 &     0.195 &     0.131 &     0.360 &    -0.569 &     0.680 \\  
 BMI (34)  &  -167.372 &     0.620 & -1,177.142 &     0.980 & -1,009.770 &     0.920 &   292.583 &     0.310 & -1,078.149 &     0.970 & -1,370.732 &     0.910 \\  
-$\theta_{c}$ &         &        &        &        &        &        &-6,549.362 &     0.805 &  -127.975 &     0.500 &  6,421.387 &     0.350 \\  
-$\theta_{n}$ &         &        &        &        &        &        & 3,708.096 &     0.340 &  3,817.413 &     0.250 &   109.317 &     0.500 \\  
+$\hat{\theta}_{c}$ &         &        &        &        &        &        &-6,549.362 &     0.805 &  -127.975 &     0.500 &  6,421.387 &     0.350 \\  
+$\hat{\theta}_{n}$ &         &        &        &        &        &        & 3,708.096 &     0.340 &  3,817.413 &     0.250 &   109.317 &     0.500 \\  
 Constant & -28,600.00 &     0.760 & -192,000.00 &     0.970 & -163,000.00 &     0.915 & -120,000.00 &     0.925 & -213,000.00 &     0.915 & -92,500.00 &     0.710 \\  
 \bottomrule \end{tabular}
