--- a/output/cnlsy_predict.tex
+++ b/output/cnlsy_predict.tex
@@ -1,27 +1,24 @@
-\begin{tabular}{lcccccc} \hline
- & (1) & (2) & (3) & (4) & (5) & (6) \\
- & cnlsyZc & cnlsyZt & cnlsyZXc & cnlsyZXt & cnlsyZLc & cnlsyZLt \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  &  &  &  \\
-male & 7,919.35*** & 7,755.32*** & 7,483.55*** & 7,472.02*** & 3,634.65*** & 3,740.61*** \\
+\begin{tabular}{lcccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) \\ 
+Group Matched & Control & Treatment & Control & Treatment & Control & Treatment \\ \midrule
+Male & 7,919.35*** & 7,755.32*** & 7,483.55*** & 7,472.02*** & 3,634.65*** & 3,740.61*** \\
  & (937.46) & (974.57) & (990.66) & (1,030.20) & (1,231.12) & (1,306.46) \\
-black & -7,480.51*** & -7,721.48*** & -3,669.31*** & -3,799.02*** & -1,853.59 & -2,022.28* \\
+Black  & -7,480.51*** & -7,721.48*** & -3,669.31*** & -3,799.02*** & -1,853.59 & -2,022.28* \\
  & (925.86) & (961.86) & (989.18) & (1,029.09) & (1,156.85) & (1,202.94) \\
-m\_ed0y & 1,888.32*** & 1,833.29*** & 303.02 & 288.90 & 284.94 & 235.17 \\
+Mother's Education & 1,888.32*** & 1,833.29*** & 303.02 & 288.90 & 284.94 & 235.17 \\
  & (258.71) & (271.05) & (293.84) & (309.08) & (357.69) & (393.81) \\
-piatmath &  &  & 168.64*** & 170.88*** & 169.51*** & 169.89** \\
+PIAT (5-7) &  &  & 168.64*** & 170.88*** & 169.51*** & 169.89** \\
  &  &  & (48.44) & (50.18) & (63.42) & (66.41) \\
-years\_30y &  &  & 3,678.09*** & 3,736.28*** & 2,223.04*** & 2,353.75*** \\
+Education (30)  &  &  & 3,678.09*** & 3,736.28*** & 2,223.04*** & 2,353.75*** \\
  &  &  & (250.08) & (264.84) & (434.21) & (457.65) \\
-si21y\_inc\_labor &  &  & 0.51*** & 0.50*** &  &  \\
+Labor Income (21) &  &  & 0.51*** & 0.50*** &  &  \\
  &  &  & (0.06) & (0.06) &  &  \\
-si34y\_bmi &  &  & -45.78 & -48.11 & -174.13* & -183.16* \\
+BMI (34) &  &  & -45.78 & -48.11 & -174.13* & -183.16* \\
  &  &  & (70.83) & (72.79) & (96.27) & (100.26) \\
-inc\_labor28 &  &  &  &  & 0.48*** & 0.46*** \\
+Labor Income (28) &  &  &  &  & 0.48*** & 0.46*** \\
  &  &  &  &  & (0.07) & (0.07) \\
 Constant & 4,170.58 & 5,151.64* & -47,898.77*** & -48,608.54*** & -30,593.81*** & -31,042.44*** \\
  & (2,940.08) & (3,083.88) & (5,285.02) & (5,504.80) & (6,818.91) & (7,102.58) \\
- &  &  &  &  &  &  \\
-Observations & 1,880 & 1,877 & 1,463 & 1,460 & 734 & 733 \\
- R-squared & 0.09 & 0.09 & 0.29 & 0.29 & 0.50 & 0.49 \\ \hline
+ Observations & 1,880 & 1,876 & 1,463 & 1,459 & 734 & 733 \\ \\ \midrule
+$R^2$ & 0.09 & 0.09 & 0.29 & 0.29 & 0.50 & 0.49 \\ \bottomrule
 \end{tabular}
