--- a/output/mincerpred_ready.tex
+++ b/output/mincerpred_ready.tex
@@ -1,8 +1,22 @@
-\begin{tabular}{lccc} \toprule
-Predicted (30) & Perpetuity (base 30) & Predicted Life-cycle\\  \midrule
-\multicolumn{3}{c}{\textbf{Control}} \\
-   29.765 &   992.179 &  1,208.639 \\  
-    (0.250) &     (8.325) &     (1.434) \\  \\
-    \multicolumn{3}{c}{\textbf{Treatment}} \\
-   41.870 &  1,395.672 &  1,701.543 \\  
-    (0.970) &    (32.347) &     (2.607) \\  \bottomrule \end{tabular}
+\begin{tabular}{cccccc}
+\toprule
+Age-30 & Age-30 & Age-30 & Age-30 & Life-cycle & $\bm{r^*}$ \\
+Prediction & Perpetuity ($r=10\%$) & Perpetuity ($r=7\%$) & Perpetuity ($r=3\%$) & Prediction &\\
+ \midrule
+\multicolumn{6}{c}{\textbf{Females}} \\ \\
+\multicolumn{6}{c}{\emph{Control}} \\
+23.187 &   241.176 &   344.537  &   803.920 &  1,017.098  & 2.28\% \\
+(3.967) &     (1.321) &     (1.887) &     (4.404)  &     (0.908) & \\ \\
+\multicolumn{6}{c}{\emph{Treatment}} \\
+26.342 &   270.195 &   385.993 &   900.650 &  1,254.068  & 2.21\% \\
+(4.664) &     (1.464) &    (2.092) &    (4.881) &    (0.932) &\\
+\midrule
+\multicolumn{6}{c}{\textbf{Males}} \\ \\
+\multicolumn{6}{c}{\emph{Control}} \\
+30.312 &   306.700 &   438.144 &  1,022.335 &  1,325.943 & 2.29\%  \\
+(5.698) &    (1.897) &    (2.710) &    (6.324) &    (0.883)  &\\ \\
+\multicolumn{6}{c}{\emph{Treatment}} \\
+42.829 &   507.322 &   724.746 &  1,691.075  &  2,032.159 & 2.11\% \\
+(9.532) &     (1.597) &     (2.281) &     (5.322) &     (1.006) &\\
+\bottomrule
+\end{tabular}
