--- a/output/nlsy_predict.tex
+++ b/output/nlsy_predict.tex
@@ -1,21 +1,18 @@
-\begin{tabular}{lcccccccc} \hline
+\begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\
- & nlsyZc & nlsyZt & nlsyZXc & nlsyZXt & nlsyZLc & nlsyZLt & nlsyZL1c & nlsyZL1t \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  &  &  &  &  &  \\
-male & 7,112.69*** & 7,556.01*** & 8,005.85*** & 8,664.14*** & 6,554.64*** & 7,236.32*** & 2,453.19*** & 2,757.78*** \\
+ Group Matched & Control & Treatment & Control & Treatment & Control & Treatment & Control & Treatment \\ \midrule
+Male & 7,112.69*** & 7,556.01*** & 8,005.85*** & 8,664.14*** & 6,554.64*** & 7,236.32*** & 2,453.19*** & 2,757.78*** \\
  & (367.39) & (415.23) & (340.96) & (381.34) & (350.71) & (395.25) & (263.57) & (293.13) \\
-black & -5,025.10*** & -5,133.49*** & -4,569.13*** & -4,454.58*** & -3,254.06*** & -3,240.81*** & -1,492.60*** & -1,422.49*** \\
+Black & -5,025.10*** & -5,133.49*** & -4,569.13*** & -4,454.58*** & -3,254.06*** & -3,240.81*** & -1,492.60*** & -1,422.49*** \\
  & (376.50) & (420.27) & (347.60) & (381.82) & (367.97) & (408.57) & (240.21) & (265.22) \\
-years\_30y &  &  & 2,428.29*** & 2,508.19*** & 2,518.36*** & 2,631.90*** & 758.26*** & 766.66*** \\
+Education (30) &  &  & 2,428.29*** & 2,508.19*** & 2,518.36*** & 2,631.90*** & 758.26*** & 766.66*** \\
  &  &  & (77.85) & (87.32) & (80.81) & (90.56) & (68.74) & (73.22) \\
-inc\_labor21 &  &  &  &  & 0.66*** & 0.65*** &  &  \\
+Labor Income (21) &  &  &  &  & 0.66*** & 0.65*** &  &  \\
  &  &  &  &  & (0.04) & (0.04) &  &  \\
-inc\_labor28 &  &  &  &  &  &  & 0.78*** & 0.78*** \\
+Labor Income (28) &  &  &  &  &  &  & 0.78*** & 0.78*** \\
  &  &  &  &  &  &  & (0.02) & (0.02) \\
 Constant & 14,696.42*** & 15,529.06*** & -17,171.76*** & -18,229.44*** & -21,624.79*** & -23,100.51*** & -5,667.82*** & -5,827.20*** \\
- & (278.09) & (301.84) & (1,027.61) & (1,163.36) & (1,068.16) & (1,215.33) & (780.05) & (869.22) \\
- &  &  &  &  &  &  &  &  \\
-Observations & 8,239 & 6,822 & 8,239 & 6,822 & 7,546 & 6,195 & 7,434 & 6,191 \\
- R-squared & 0.10 & 0.10 & 0.24 & 0.25 & 0.30 & 0.30 & 0.69 & 0.69 \\ \hline
+ & (278.09) & (301.84) & (1,027.61) & (1,163.36) & (1,068.16) & (1,215.33) & (780.05) & (869.22) \\ \\ \midrule 
+ Observations & 8,239 & 6,822 & 8,239 & 6,822 & 7,546 & 6,195 & 7,434 & 6,191 \\
+$R^2$ & 0.10 & 0.10 & 0.24 & 0.25 & 0.30 & 0.30 & 0.69 & 0.69 \\ \bottomrule
 \end{tabular}
