--- a/Appendices/Attrition.tex
+++ b/Appendices/Attrition.tex
@@ -1,13 +1,13 @@
 \section{Accounting for Attrition} \label{appendix:attrition}
 
-\noindent We use a standard inverse probability weighting (IPW) scheme based on a logit model that predicts attrition using baseline characteristics.\footnote{\citet{Horvitz_Thompson_1952_JASA}.} Recall that $R = 1$ if the child is randomized to treatment, and $R = 0$ otherwise. Similarly, let $A = 1$ denote the case where we observe a generic outcome $Y$, and $A = 0$ otherwise. As in the main text, $\mathcal{B}$ represents background (pre-treatment) variables and $X$ variables that could be affected by treatment and that we use to predict $Y$. We abstract from dynamics in $Y$ and $X$ for simplicity, but the procedure could be easily generalized.\\
+\noindent We use a standard inverse probability weighting (IPW) scheme based on a logit model that predicts attrition using baseline characteristics.\footnote{\citet{Horvitz_Thompson_1952_JASA}.} Recall that $R = 1$ if the child is randomized to treatment, and $R = 0$ otherwise. Similarly, let $A = 1$ denote the case where we observe a generic outcome $Y$, and $A = 0$ otherwise. As in the main text, $\bm{B}$ represents background (pre-treatment) variables and $X$ variables that could be affected by treatment and that we use to predict $Y$. We abstract from dynamics in $Y$ and $X$ for simplicity, but the procedure could be easily generalized.\\
 
-\noindent We assume $A$ is independent of $Y$ conditional on $\mathcal{B}$ and $X$. More formally, we invoke
+\noindent We assume $A$ is independent of $Y$ conditional on $\bm{B}$ and $X$. More formally, we invoke
 
 
 \begin{assumption} \label{ass:attr}
 	\begin{align*}
-		A \independent Y | \mathcal{B}, X, R.
+		A \independent Y | \bm{B}, X, R.
 	\end{align*}
 \end{assumption}
 
@@ -16,13 +16,13 @@
 \begin{align} \label{eq:case2}
 \mathbb{E}[Y_r] & = \int \int y f_{Y_r|X}(y) f_X(x) dydx \\ \nonumber
 	           & = \int \int y f_{Y|X,R=r}(y) f_X(x) dydx \\ \nonumber
-				& = \int \int \int y f_{Y|R=r,\mathcal{B},X}(y) f_{\mathcal{B}|R=r}(b) f_X(x) dydbdx \\ \nonumber
-				& = \int \int \int y f_{Y|R=r,\mathcal{B},X,A=1}(y) f_{\mathcal{B}|R=r,X}(b) f_X dydbdx
+				& = \int \int \int y f_{Y|R=r,\bm{B},X}(y) f_{\bm{B}|R=r}(b) f_X(x) dydbdx \\ \nonumber
+				& = \int \int \int y f_{Y|R=r,\bm{B},X,A=1}(y) f_{\bm{B}|R=r,X}(b) f_X dydbdx
 \end{align}
-\noindent where each component of the last expression in \eqref{eq:case2} is straightforward to recover from the data. Using Bayes' Theorem, we can write an equivalent expression to make the IPW scheme explicit. That is, we apply Bayes' Theorem to $f_{\mathcal{B}|R=r,X}(b)$ and $f_X(x)$ to obtain
+\noindent where each component of the last expression in \eqref{eq:case2} is straightforward to recover from the data. Using Bayes' Theorem, we can write an equivalent expression to make the IPW scheme explicit. That is, we apply Bayes' Theorem to $f_{\bm{B}|R=r,X}(b)$ and $f_X(x)$ to obtain
 
 \begin{equation*}
-f_{\mathcal{B}|R=r,X}(b) = \frac{f_{\mathcal{B}|R=r,X,A=1}(b) P(A=1|R=r,X)}{P(A=1|R=r,\mathcal{B},X)}
+f_{\bm{B}|R=r,X}(b) = \frac{f_{\bm{B}|R=r,X,A=1}(b) P(A=1|R=r,X)}{P(A=1|R=r,\bm{B},X)}
 \end{equation*}
 and
 \begin{equation*}
@@ -31,8 +31,8 @@ and
 \noindent Substituting these expressions into \eqref{eq:case2}, we obtain
 
 \begin{align*} \label{eq:case2ipw}
-\mathbb{E}[Y_r] & = \int \int \int y f_{Y,\mathcal{B},X|R=r,A=1}(y,b.x) \frac{P(R=r,A=1) P(A=1|R=r,X)}{P(R=r,A=1|X) P(A=1|R=r,\mathcal{B},X)} dydbdx \\
-	            & = \int \int  \int y f_{Y,\mathcal{B},X|R=r,A=1}(y,b,x) \frac{P(R=r,A=1)}{P(R=r|X) P(A=1|R=r,\mathcal{B},X)} dydbdx. \\
+\mathbb{E}[Y_r] & = \int \int \int y f_{Y,\bm{B},X|R=r,A=1}(y,b.x) \frac{P(R=r,A=1) P(A=1|R=r,X)}{P(R=r,A=1|X) P(A=1|R=r,\bm{B},X)} dydbdx \\
+	            & = \int \int  \int y f_{Y,\bm{B},X|R=r,A=1}(y,b,x) \frac{P(R=r,A=1)}{P(R=r|X) P(A=1|R=r,\bm{B},X)} dydbdx. \\
 \end{align*}
 
 \noindent Assumption \ref{ass:attr} generalizes the matching assumption of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. It conditions not only on pre-program variables but on fully observed post-treatment variables, $X$. This enables us to account for two types of selection:  (i) selection into treatment; and (ii) selection into item response. The corresponding sample estimator for $\mathbb{E}[Y_r]$ is
@@ -45,18 +45,18 @@ and
 \begin{align*}
 	\beta_{i,r} = \frac{1}{\pi_r(x_i) \alpha(r_i,b_i,x_i)} \frac{1}{\sum_k{\frac{\mathbf{1}(r_i = r) \mathbf{1}(a_i = 1)}{\pi_r(x_k)\alpha(r_k,b_k,x_k)}}},
 \end{align*}
-\noindent with $\pi_r(x) := P(R=r|X=x)$ and $\alpha(r,b,x) := P(A=1|R=r,\mathcal{B}=b,X=x)$. The weight $\pi_r$ corrects for selection into treatment based on pre-program variables $X$. The weight $\alpha_{i}$ corrects for item non-response based on $R, \mathcal{B}, X$.\\
+\noindent with $\pi_r(x) := P(R=r|X=x)$ and $\alpha(r,b,x) := P(A=1|R=r,\bm{B}=b,X=x)$. The weight $\pi_r$ corrects for selection into treatment based on pre-program variables $X$. The weight $\alpha_{i}$ corrects for item non-response based on $R, \bm{B}, X$.\\
 
 \subsection{Variables to Construct IPW}
 
 \noindent We follow the procedure in Section~\ref{appendix:bvariables} to choose the variables with which we construct the weights. Tables~\ref{table:attpooled}-\ref{table:attfemales} list the variables in which we account fro attrition, together with the variables we use to construct the IPW scheme. We provide different lists for estimates pooling females and males and estimates by gender. Section~\ref{appendix:methodology} explains the cases in which we account for attrition.
 
 \newgeometry{top=.1in, bottom=.1in, left=.1in, right=.1in}
-\begin{sidewaystable}[H] 
+\begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Variables Used to Create IPW Scheme, Estimates Pooling Females and Males}
 \label{table:attpooled}
-\centering 
+\centering
 \input{AppOutput/Methodology/model_select_pooled.tex}
 \begin{tablenotes}
 \footnotesize
@@ -65,11 +65,11 @@ and
 \end{threeparttable}
 \end{sidewaystable}
 
-\begin{sidewaystable}[H] 
+\begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Variables Used to Create IPW Scheme, Estimates for Females}
 \label{table:attfemales}
-\centering 
+\centering
 \input{AppOutput/Methodology/model_select_female.tex}
 \begin{tablenotes}
 \footnotesize
@@ -78,11 +78,11 @@ and
 \end{threeparttable}
 \end{sidewaystable}
 
-\begin{sidewaystable}[H] 
+\begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Variables Used to Create IPW Scheme, Estimates for Males}
 \label{table:attfemales}
-\centering 
+\centering
 \input{AppOutput/Methodology/model_select_male.tex}
 \begin{tablenotes}
 \footnotesize
@@ -91,4 +91,4 @@ and
 \end{threeparttable}
 \end{sidewaystable}
 \restoregeometry
-\doublespacing
+\doublespacing 
