--- a/output/abccare_funcform2_ready.tex
+++ b/output/abccare_funcform2_ready.tex
@@ -6,7 +6,7 @@ PIAT (5-7) &   152.554 &     0.325 &  -576.029 &     0.680 &  -728.583 &     0.7
 Education (30)  &  2,956.656 &     0.015 & 10,915.656 &     0.025 &  7,959.000 &     0.060 &  4,952.654 &     0.015 & 12,374.844 &     0.025 &  7,422.189 &     0.120 \\  
 Labor Income (21) &     0.679 &     0.030 &    -0.465 &     0.710 &    -1.144 &     0.895 &     1.056 &     0.030 &    -0.899 &     0.755 &    -1.955 &     0.930 \\  
 BMI (34) &        &        &        &        &        &        &        &        &        &        &        &         \\
-$\theta_{c}$ &        &        &        &        &        &        &   349.690 &     0.310 &  -948.807 &     0.735 & -1,298.497 &     0.815 \\  
-$\theta_{n}$ &        &        &        &        &        &        &  4,952.654 &     0.015 & 12,374.844 &     0.025 &  7,422.189 &     0.120 \\  
+$\hat{\theta}_{c}$ &        &        &        &        &        &        &   349.690 &     0.310 &  -948.807 &     0.735 & -1,298.497 &     0.815 \\  
+$\hat{\theta}_{n}$ &        &        &        &        &        &        &  4,952.654 &     0.015 & 12,374.844 &     0.025 &  7,422.189 &     0.120 \\  
 Constant &   152.554 &     0.325 &  -576.029 &     0.680 &  -728.583 &     0.730 &     1.056 &     0.030 &    -0.899 &     0.755 &    -1.955 &     0.930 \\  
 \bottomrule \end{tabular}
