fix two appendices

--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -410,7 +410,7 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Prediction of Transfer Income at Age 30 Accounting for $\bm{B}$ and $\bm{\theta}, \bm{X}_{t} \text{ (set 2)}$, ABC/CARE}
-\label{table:predfac3}
+\label{table:predfacti3}
 \centering
 \footnotesize
 \input{output/abccare_funcform3_ti_ready.tex}
