--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -4,29 +4,29 @@
 \cmidrule(lr){2-4}      \cmidrule(lr){5-7}      \cmidrule(lr){8-10}																			
 Removed Component       &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     \\																			
 \midrule																			
-None	&	124,705	&	0.09	&	2.35	&	953,113	&	\textbf{0.15}	&	\textbf{11.24}	&	430,616	&	\textbf{0.13}	&	\textbf{5.63}	\\
-	&		&	(0.07)	&	(1.09)	&		&	(0.05)	&	(4.60)	&		&	(0.04)	&	(2.15)	\\ \\
-Parental Income	&	127,883	&	0.04	&	0.96	&	96,178	&	\textbf{0.12}	&	\textbf{10.18}	&	119,346	&	\textbf{0.08}	&	\textbf{4.34}	\\
-	&		&	(0.02)	&	(0.97)	&		&	(0.04)	&	(4.62)	&		&	(0.03)	&	(2.03)	\\
-Subject QALY	&	-2,551	&	\textbf{0.11}	&	2.39	&	144,405	&	\textbf{0.14}	&	\textbf{9.52}	&	83,896	&	\textbf{0.12}	&	\textbf{4.69}	\\
-	&		&	(0.08)	&	(1.02)	&		&	(0.06)	&	(4.43)	&		&	(0.05)	&	(2.09)	\\
-Subject Labor Income	&	42,387	&	0.08	&	1.88	&	187,785	&	\textbf{0.14}	&	\textbf{9.04}	&	120,839	&	\textbf{0.12}	&	\textbf{4.27}	\\
-	&		&	(0.08)	&	(0.79)	&		&	(0.05)	&	(3.84)	&		&	(0.05)	&	(1.94)	\\
-Subject Transfer Income	&	465	&	0.10	&	2.34	&	-3,176	&	\textbf{0.15}	&	\textbf{11.27}	&	-2,782	&	\textbf{0.13}	&	\textbf{5.66}	\\
-	&		&	(0.08)	&	(1.10)	&		&	(0.04)	&	(4.62)	&		&	(0.04)	&	(2.15)	\\
-Medical Expenditures	&	-5,877	&	0.10	&	2.41	&	-35,480	&	\textbf{0.15}	&	\textbf{11.62}	&	-26,630	&	\textbf{0.14}	&	\textbf{5.92}	\\
-	&		&	(0.08)	&	(1.14)	&	&	(0.04)	&	(4.57)	&		&	(0.04)	&	(2.15)	\\
-Alternative Preschools &	16,815	&	0.08	&	2.16	&	14,291	&	\textbf{0.14}	&	\textbf{11.08}	&	15,583	&	\textbf{0.11}	&	\textbf{5.46}	\\
-	&	&	(0.05)	&	(1.09)	&		&	(0.04)	&	(4.59)	&		&	(0.04)	&	(2.15)	\\
-Education Costs	&	-34,839	&	0.10	&	\textbf{2.72}	&	4,876	&	\textbf{0.14}	&	\textbf{11.18}	&	-12,294	&	\textbf{0.13}	&	\textbf{5.76}	\\
-	&		&	(0.07)	&	(1.09)	&		&	(0.04)	&	(4.63)	&		&	(0.04)	&	(2.15)	\\
-Crime Costs	&	73,673	&	0.08	&	1.54	&	607,235	&	\textbf{0.10}	&	4.53	&	215,441	&	\textbf{0.10}	&	\textbf{3.24}	\\
-	&		&	(0.08)	&	(0.99)	&		&	(0.05)	&	(3.10)	&		&	(0.04)	&	(1.34)	\\ \\
-Deadweight Loss	&		&	0.14	&	\textbf{3.37}	&		&	\textbf{0.18}	&	\textbf{16.74}	&		&	\textbf{0.19}	&	\textbf{8.37}	\\
-	&		&	(0.12)	&	(1.64)	&		&	(0.06)	&	(6.95)	&		&	(0.07)	&	(3.22)	\\
-0\% Discount Rate	&		&		&	4.52	&		&		&	\textbf{28.35}	&		&		&	\textbf{14.11}	\\
-	&		&		&	(3.54)	&		&		&	(13.20)	&		&		&	(6.12)	\\
-7\% Discount Rate	&		&		&	1.32	&		&		&	\textbf{4.14}	&		&		&	\textbf{2.33}	\\
-	&		&		&	(0.44)	&		&		&	(1.48)	&		&		&	(0.76)	\\
+None	&	139,959	&	0.09	&	\textbf{2.53}	&	807,945	&	\textbf{0.14}	&	\textbf{9.75}	&	421,625	&	\textbf{0.13}	&	\textbf{5.56}	\\
+	&		&	(0.05)	&	(0.97)	&		&	(0.05)	&	(4.64)	&		&	(0.05)	&	(2.39)	\\ \\
+Parental Income	&	96,251	&	0.05	&	1.47	&	65,477	&	\textbf{0.11}	&	\textbf{9.00}	&	82,287	&	\textbf{0.09}	&	\textbf{4.66}	\\
+	&		&	(0.02)	&	(0.89)	&		&	(0.04)	&	(4.63)	&		&	(0.03)	&	(2.30)	\\
+Subject Labor Income	&	50,580	&	0.08	&	\textbf{1.99}	&	308,825	&	\textbf{0.12}	&	6.32	&	73,105	&	\textbf{0.12}	&	\textbf{4.65}	\\
+	&		&	(0.05)	&	(0.70)	&		&	(0.06)	&	(3.92)	&		&	(0.05)	&	(2.08)	\\
+Subject Transfer Income	&	2,217	&	0.09	&	\textbf{2.50}	&	-5,943	&	\textbf{0.14}	&	\textbf{9.81}	&	-2,798	&	\textbf{0.13}	&	\textbf{5.59}	\\
+	&		&	(0.05)	&	(0.96)	&		&	(0.05)	&	(4.64)	&		&	(0.04)	&	(2.39)	\\
+Subject QALY	&	14,964	&	0.09	&	\textbf{2.37}	&	68,306	&	\textbf{0.14}	&	\textbf{9.05}	&	75,462	&	\textbf{0.11}	&	\textbf{4.72}	\\
+	&		&	(0.05)	&	(0.91)	&		&	(0.05)	&	(4.39)	&		&	(0.06)	&	(2.34)	\\
+Medical Expenditures	&	-14,881	&	0.09	&	\textbf{2.69}	&	-18,601	&	\textbf{0.14}	&	\textbf{9.95}	&	-18,397	&	\textbf{0.13}	&	\textbf{5.76}	\\
+	&		&	(0.05)	&	(0.98)	&		&	(0.04)	&	(4.64)	&		&	(0.04)	&	(2.37)	\\
+Control Substitution	&	17,246 &	0.07	&	\textbf{2.34}	&	13,889	&	\textbf{0.13}	&	\textbf{9.60}	&	15,376	&	\textbf{0.11}	&	\textbf{5.39}	\\
+	&		&	(0.04)	&	(0.97)	&		&	(0.04)	&	(4.64)	&	&	(0.04)	&	(2.39)	\\
+Education Costs	&	-2,195	&	0.09	&	\textbf{2.55}	&	6,293	&	\textbf{0.13}	&	\textbf{9.68}	&	-491	&	\textbf{0.12}	&	\textbf{5.56}	\\
+	&		&	(0.05)	&	(0.97)	&		&	(0.05)	&	(4.66)	&		&	(0.04)	&	(2.39)	\\
+Crime Costs	&	65,209	&	0.08	&	1.81	&	451,831	&	\textbf{0.10}	&	4.75	&	276,621	&	\textbf{0.08}	&	2.48	\\
+	&	&	(0.05)	&	(0.94)	&		&	(0.04)	&	(2.85)	&		&	(0.04)	&	(1.21)	\\ \\
+Deadweight Loss	&		&	0.13	&	\textbf{3.60}	&		&	\textbf{0.18}	&	\textbf{14.54}	&		&	\textbf{0.17}	&	\textbf{8.25}	\\
+	&		&	(0.09)	&	(1.43)	&		&	(0.06)	&	(6.96)	&		&	(0.06)	&	(3.58)	\\
+0\% Discount Rate	&		&		&	4.92	&		&		&	\textbf{25.40}	&		&		&	\textbf{13.39}	\\
+	&		&		&	(3.36)	&		&		&	(13.58)	&		&		&	(6.57)	\\
+7\% Discount Rate	&		&		&	1.37	&		&		&	\textbf{3.54}	&		&		&	\textbf{2.34}	\\
+	&		&		&	(0.36)	&		&		&	(1.50)	&		&		&	(0.84)	\\
 \bottomrule																			
 \end{tabular}																			
