--- a/output/sensitivityforslides.tex
+++ b/output/sensitivityforslides.tex
@@ -1,32 +1,30 @@
 \begin{tabular}{l r r r}																			
-\toprule																			
- & \mc{3}{c}{Pooled}       \\																			
-																		
-Removed Component       &       NPV     &       IRR     &       B/C        \\																	
+\toprule																															
+Removed Component       &       NPV     &       IRR     &       B/C     \\																			
 \midrule																			
-None	&	430,616	&	\textbf{0.13}	&	\textbf{5.63}	\\
-	&	&	(0.04)	&	(2.15)	\\ \\	
-Parental Income	&119,346 &	\textbf{0.08}	&	\textbf{4.34}	\\	
-	&		&	(0.03)	&	(2.03)	\\
-Subject QALY	&	83,896	&	\textbf{0.12}	&	\textbf{4.69}	\\
-	&		&	(0.05)	&	(2.09)	\\	
-Subject Labor Income & 120,839	&	\textbf{0.12}	&	\textbf{4.27}	\\
-	&		&	(0.05)	&	(1.94)	\\	
-Subject Transfer Income	&	-2,782	&	\textbf{0.13}	&	\textbf{5.66}	\\	
- 	&		&	(0.04)	&	(2.13)	\\
-Medical Expenditures	&	-26,630	&	\textbf{0.14}	&	\textbf{5.92}	\\	
-	&		&	(0.04)	&	(2.15)	\\	
-Control Contamination	&	15,583	&	\textbf{0.11}	&	\textbf{5.46}	\\	
-	&		&	(0.04)	&	(2.15)	\\	
-Education Costs	& -12,294	&	\textbf{0.13}	&	\textbf{5.76}	\\
-	&		&	(0.04)	&	(2.15)	\\	
-Crime Costs	&	215,441	&	\textbf{0.10}	&	\textbf{3.24}	\\	
-	&		&	(0.04)	&	(1.34)	\\ \\	
-Deadweight Loss	&		&	\textbf{0.19}	&	\textbf{8.37}	\\
-	&	&	(0.07)	&	(3.22)	\\	
-0\% Discount Rate	&		&		&	\textbf{14.11}	\\	
-		&		&		&	(6.12)	\\	
-5\% Discount Rate	&		&		&	\textbf{3.46}	\\
-	&		&		&	(1.23)	\\
+None	&	421,625	&	\textbf{0.13}	&	\textbf{5.56}	\\
+	&				&	(0.05)	&	(2.39)	\\ \\
+Parental Income	&	82,287	&	\textbf{0.09}	&	\textbf{4.66}	\\
+	&		&	(0.03)	&	(2.30)	\\
+Subject Labor Income		&	73,105	&	\textbf{0.12}	&	\textbf{4.65}	\\
+	&		&	(0.05)	&	(2.08)	\\
+Subject Transfer Income	&	-2,798	&	\textbf{0.13}	&	\textbf{5.59}	\\
+	&		&	(0.04)	&	(2.39)	\\
+Subject QALY	&	75,462	&	\textbf{0.11}	&	\textbf{4.72}	\\
+	&		&	(0.06)	&	(2.34)	\\
+Medical Expenditures	&	-18,397	&	\textbf{0.13}	&	\textbf{5.76}	\\
+	&	&	(0.04)	&	(2.37)	\\
+Control Substitution	&		15,376	&	\textbf{0.11}	&	\textbf{5.39}	\\
+	&	&	(0.04)	&	(2.39)	\\
+Education Costs	&	-491	&	\textbf{0.12}	&	\textbf{5.56}	\\
+	&			&	(0.04)	&	(2.39)	\\
+Crime Costs	&	276,621	&	\textbf{0.08}	&	2.48	\\
+	&	&	(0.04)	&	(1.21)	\\ \\
+Deadweight Loss	&		&	\textbf{0.17}	&	\textbf{8.25}	\\
+	&		&	(0.06)	&	(3.58)	\\
+0\% Discount Rate	&		&		&	\textbf{13.39}	\\
+			&			&		&	(6.57)	\\
+7\% Discount Rate	&		&		&	\textbf{2.34}	\\
+	&		&		&	(0.84)	\\
 \bottomrule																			
 \end{tabular}																			
