all results of main paper are up to date

--- a/output/mincerpred.tex
+++ b/output/mincerpred.tex
@@ -1,10 +1,10 @@
-% matrix: allperp file: mincerpred.tex  18 Sep 2016 19:27:37
+% matrix: allperpr file: mincerpred.tex  19 Sep 2016 10:11:35
 \begin{table}[htbp]
-\begin{tabular}{lcccccccccc} \hline \hline
- \multicolumn{1}{c}{ c1 }  & c1  & c1  & c1  & c1  & c1  & c1  & c1  & c1  & c1  \\  \hline 
-   23.187 &   241.176 &   803.920 &   344.537 &  1017.098 &    26.342 &   270.195 &   900.650 &   385.993 &  1254.068 \\  
-    3.967 &     1.321 &     4.404 &     1.887 &     0.908 &     4.664 &     1.464 &     4.881 &     2.092 &     0.932 \\  
-   30.312 &   306.700 &  1022.335 &   438.144 &  1325.943 &    42.829 &   507.322 &  1691.075 &   724.746 &  2032.159 \\  
-    5.698 &     1.897 &     6.324 &     2.710 &     0.883 &     9.532 &     1.597 &     5.322 &     2.281 &     1.006 \\  
+\begin{tabular}{lcccccccc} \hline \hline
+ \multicolumn{1}{c}{ c1 }  & c1  & c1  & c1  & c1  & c1  & c1  & c1  \\  \hline 
+   23.187 &     0.023 &    26.342 &   270.195 &   385.993 &   900.650 &  1254.068 &     0.021 \\  
+    3.967 &         . &     4.664 &     1.464 &     2.092 &     4.881 &     0.932 &         . \\  
+   30.312 &     0.023 &    42.829 &   507.322 &   724.746 &  1691.075 &  2032.159 &     0.021 \\  
+    5.698 &         . &     9.532 &     1.597 &     2.281 &     5.322 &     1.006 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
